--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 # In this directory, run the following command to build this builder.
 # $ gcloud builds submit . --config=cloudbuild.yaml
-# substitutions:
-#     _DOCKER_COMPOSE_VERSION: 1.25.5
+substitutions:
+    _DOCKER_COMPOSE_VERSION: 1.24.0
   steps:
   - name: 'gcr.io/cloud-builders/docker'
     args:
