--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,16 +7,16 @@ substitutions:
     args:
     - 'build'
     - '--build-arg'
-    - 'DOCKER_COMPOSE_VERSION=${_DOCKER_COMPOSE_VERSION}'
+    - 'version=1.24.0
     - '-t'
     - 'gcr.io/$PROJECT_ID/docker-compose:latest'
     - '-t'
-    - 'gcr.io/$PROJECT_ID/docker-compose:${_DOCKER_COMPOSE_VERSION}'
+    - 'gcr.io/$PROJECT_ID/docker-compose:1.24.0'
     - '.'
   - name: 'gcr.io/$PROJECT_ID/docker-compose'
     args: ['version']
   
   images:
   - 'gcr.io/$PROJECT_ID/docker-compose:latest'
-  - 'gcr.io/$PROJECT_ID/docker-compose:${_DOCKER_COMPOSE_VERSION}'
+  - 'gcr.io/$PROJECT_ID/docker-compose:1.24.0'
   tags: ['cloud-builders-community']
