--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,7 @@
     args:
     - 'build'
     - '--build-arg'
-    - 'version=1.24.0
+    - 'version=1.24.0'
     - '-t'
     - 'gcr.io/$PROJECT_ID/docker-compose:latest'
     - '-t'
